--- a/assets/style.css
+++ b/assets/style.css
@@ -1,30 +1,66 @@
 body {
-    font-family: "Lato", sans-serif;
+    font-family: Georgia, serif;
     margin: 0;
-    background-color: #F7F7F7;
+    background-color: #eff0e9;
+}
+
+.header {
+    background-color: #222222;
+    height: 256px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .header-title {
+    color: #FFFFFF;
     font-size: 48px;
     margin: 0 auto;
     text-align: center;
 }
+
 .header-description {
-    font-size: 32px;
+    color: #CFCFCF;
+    font-size: 24px;
     margin-left: 10px;
-    text-align: left;
+    text-align: center;
+}
+
+.graph_title {
+    background-color: #3e3e3e;
+    color: white;
+    font-size: 28px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 30px;
+    max-width: 1500px;
+}
+
+.graph_description {
+    background-color: #3e3e3e;
+    color: white;
+    font-size: 25px;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 1500px;
 }
 
 .menu-title {
     margin-top: 10px;
     font-size: 20px;
     font-weight: bold;
-    color: #079A82;
+    color: black;
     text-align: center;
 }
 
+.menu {
+    display: flex;
+    justify-content: space-evenly;
+    margin: -80px auto 0 auto;
+}
+
 .dropdown{
-    height: 120px;
+    height: 60px;
     width: 1000px;
     font-size: 20px;
     margin-left: auto;
@@ -32,36 +68,13 @@ body {
     text-align: center;
 }
 
-.first_graph_title {
-    font-size: 28px;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 30px;
-}
-.first_graph_description {
-    font-size: 25px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.second_graph_title {
-    font-size: 28px;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 30px;
-}
-.second_graph_description {
-    font-size: 25px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-
 .card {
     margin-bottom: 24px;
-    margin-top: 0px;
+    margin-top: auto;
     max-width: 1500px;
     box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.18);
     margin-left: auto;
     margin-right: auto;
+    outline: 2px solid #3e3e3e;
+    outline-offset: 0px;
 }
